# Quinify

./: CMakeLists.txt  output1.txt  output10.txt  output2.txt  output3.txt  output5.txt  output7.txt  output8.txt  readme.md
src/: Expression.cpp  Table.h  Term.h  initial.cpp  input.txt  input_parsing.cpp
src/Project/: Expression.cpp  Expression.h  Table.cpp  Table.h  Term.cpp  Term.h  initial.cpp  input.txt  minimized_logic_0.v  minimized_logic_1.v  output.v  output2.txt  output3.txt  output5.txt  output9.txt  verilog.h
tests/: test1.txt  test10.txt  test11.txt  test2.txt  test3.txt  test4.txt  test6.txt  test7.txt  test8.txt  test9.txt  tests1.txt
