cmake_minimum_required(VERSION 3.29)
project(dd1_s25_project1_quinify)

set(CMAKE_CXX_STANDARD 14)

add_executable(dd1_s25_project1_quinify
    .idea/.gitignore
    .idea/dd1-s25-project1-quinify.iml
    .idea/editor.xml
    .idea/misc.xml
    .idea/modules.xml
    .idea/vcs.xml
    .idea/workspace.xml
    src/input_parsing.cpp
        cmake-build-debug/tests/test1.txt
    readme.md)
